Products.CMFDefault Changelog
=============================

2.3.0-alpha (unreleased)
------------------------

- Only test reStructuredText functionality under Zope 2.13 and before.

- Document: Improved 'manage_FTPget' method.
  HTML responses can now be rendered by a view.

- Removed ``five.formlib`` dependency. ``zope.formlib`` is now used directly.

- profiles: Added default settings for the member data tool.

- upgrade: Added upgrade step for member data tool settings.

- skins and browser views: Fixed 'login_time' handling.
  Should be working with string and DateTime values because the MemberDataTool
  settings might be inconsistent.

- browser views: Added SettingsEditFormBase.
  This can be used for edit forms for global settings.

- Require at least Zope 2.13.4.

- profiles and upgrade: Added support for using the new OFS UserFolder class.

- views: Added Unauthorized exception view.
  This replaces CookieCrumbler's old redirect support.

- Deal with deprecation warnings for Zope 2.13.

- Use the standard libraries doctest module.

- skins: Removed unused styles from css.

- Removed testing dependency on zope.app.testing.

- Upgrade steps: Merged faulty utility registration fixup script,
  tool utility registration and new-style actions upgrade from 
  an older migration script in Products.CMFCore for pre-2.1.0 
  instances into GenericSetup upgrade steps

- WorkflowTool/DiscussionItem: Create a set of GenericSetup 
  upgrade steps to instantiate the new single-state workflow 
  for Discussion Items and associate it with the content type.

- MetadataTool: Replaced write-on-read upgrade for the Dublin Core
  metadata definitions with a set of GenericSetup upgrade steps.
  
- SyndicationTool: Updated to produce RSS 2.0. Uses an adapter for
  syndication information.

2.2.0-beta (2009-12-06)
-----------------------

- MetadataTool: Improved tool initialization.
  This prevents write-on-read behavior of newly created tool instances.
